# ShareBook

./: .gitignore  README.md
code/Control/: Control.cpp
code/DataBroker/: NetizenBroker.cpp  NetizenBroker.h  NetizenProxy.h  NoteBroker.cpp
code/Entity/: MaterialProxy.h  MessageProxy.cpp  Netizen.h  NetizenInterface.cpp  NetizenInterface.h  NewNoteMessage.h  Note.cpp  Note.h
docs/Analyse/: Publish Note and Communicate.vpp  Publish Note and Communicate.vpp.bak_000f  Publish Note and Communicate.vpp.bak_001d  project.xml  (+1 more)
sql/: ShareBook_material.sql  ShareBook_message.sql  ShareBook_netizen.sql  ShareBook_netizen_concerns.sql  ShareBook_netizen_fans.sql  ShareBook_note.sql  ShareBook_published_note.sql  ShareBook_routines.sql
src/ShareBook_Prototype/: CMakeLists.txt  Main.qml  image.qrc  main.cpp
src/ShareBook_Prototype/Control/: Control.cpp  Control.h  control.cpp  control.h  myListViewModel.cpp  myListViewModel.h
src/ShareBook_Prototype/DataBroker/: DataBaseBroker.h  MessageBroker.cpp  MessageBroker.h  NetizenBroker.cpp  NetizenBroker.h  NetizenProxy.cpp  NoteBroker.cpp  NoteBroker.h  RelationalBroker.cpp  RelationalBroker.h  materialBroker.cpp  materialBroker.h  materialbroker.cpp  materialbroker.h  messageBroker.cpp  messageBroker.h  netizenBroker.cpp  netizenBroker.h  noteBroker.cpp  noteBroker.h  relationalBroker.cpp  relationalBroker.h
src/ShareBook_Prototype/Entity/: Material.cpp  Material.h  MaterialInterface.h  MaterialProxy.cpp  MaterialProxy.h  Message.h  MessageInterface.h  MessageProxy.cpp  MessageProxy.h  Netizen.cpp  Netizen.h  NetizenInterface.cpp  NetizenInterface.h  NetizenProxy.cpp  NetizenProxy.h  NewNoteMessage.cpp  NewNoteMessage.h  Note.cpp  Note.h  NoteInterface.cpp  NoteInterface.h  NoteProxy.cpp  NoteProxy.h  material.cpp  material.h  materialInterface.cpp  materialInterface.h  materialProxy.cpp  materialProxy.h  materialinterface.cpp  materialinterface.h  materialproxy.cpp  materialproxy.h  message.cpp  message.h  messageProxy.cpp  messageProxy.h  messageinterface.cpp  netizen.cpp  netizen.h  (+10 more)
src/ShareBook_Prototype/UI/: EditDialog.qml  Main.qml  NoteDetailPage.qml  Recommend.qml
src/ShareBook_Prototype/resource_file/materials/: 文本文件.txt
(+98 files in other folders)
